# CmakeCppTemplate

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
cmake/: FindSomeLib.cmake
docs/: mainpage.md
include/modern/: lib.hpp
src/: CMakeLists.txt  main.cpp  tests.cpp
